Fix image source path in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <center><a href="./William Blake.html"><img src="./assets/images/William_blake.png" height = "200" alt="- A descriptive photo of the first website"></a></center>
     <center><a href="../William Blake.html">Follow the link to this website</a></center><br>
     <center><h2>[Site_references] : A complete wesite site that main aim is to provide relative webrefences [ie websites, webapp,articles, actualities e.t.c ]</h2></center>
-    <center><a href="../4.3 HTML Porfolio Project/public/contact.html"><img src="../4.3 HTML Porfolio Project/assets/images/movie-ranking.png" height = "200" alt="A complete Website reference site"></a></center>
+    <center><a href="../4.3 HTML Porfolio Project/public/contact.html"><img src="./assets/images/movie-ranking.png" height = "200" alt="A complete Website reference site"></a></center>
     <center><a href="../4.3 HTML Porfolio Project/public/contact.html">Click here to visit My website</a></center>
     <h3><a href="">Register or login</a></h3>
     <a href="">About</a>
