Refactor links and content in index.html

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <big><h1>This is some of my recent projects</h1></big>
     <center><h2>[divinity] : A website that contains information about the earth's most special entities</h2></center>
    <center><a href="./William Blake.html"><img src="./assets/images/William_blake.png" height = "200" alt="- A descriptive photo of the first website"></a></center>
-    <center><a href="../William Blake.html">Follow the link to this website</a></center><br>
-    <center><h2>[Site_references] : A complete wesite site that main aim is to provide relative webrefences [ie websites, webapp,articles, actualities e.t.c ]</h2></center>
-    <center><a href="../4.3 HTML Porfolio Project/public/contact.html"><img src="./assets/images/movie-ranking.png" height = "200" alt="A complete Website reference site"></a></center>
-    <center><a href="../4.3 HTML Porfolio Project/public/contact.html">Click here to visit My website</a></center>
+    <center><a href="./William Blake.html">Follow the link to this website</a></center><br>
+    <center><h2>[Site_references] : A complete website site that main aim is to provide relative webrefences [ie websites, webapp,articles, actualities e.t.c ]</h2></center>
+    <center><a href="./public/movie-ranking.html"><img src="./assets/images/movie-ranking.png" height = "200" alt="A complete Website reference site"></a></center>
+    <center><a href="./public/movie-ranking.html">Click here to visit My website</a></center>
     <h3><a href="">Register or login</a></h3>
-    <a href="">About</a>
-    <a href="">Contact</a>
+    <center><a href="./public/about.html">About</a> <a href="./public/contact.html">Contact</a></center><br><br>
+    <center color = "gray"> @copyright 2001 </center>
+    
 
 
 </body>
